--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: sans-serif;
+  font-size: 17px;
+  line-height: 1;
 }
 
 a {
@@ -20,21 +22,38 @@ form div {
   display: inline-block;
 }
 
+button {
+  background-color: #62656f;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 .footer {
   background: white;
+  display: inline-block;
+  background: #3b394d;
+  width: 100%;
+  color: white;
   display: flex;
-  flex-direction: row;
 }
 
-.footer-wrap {
-  margin-left: 25%;
+.footer li {
+  display: inline;
+  text-align: center;
 }
 
-.footer-wrap ul,
-li {
-  display: flex;
-  flex-direction: row;
-  padding: 1em;
+.footer a {
+  color: white;
+  text-decoration: none;
+  flex: 1;
+  margin: 1em;
 }
 
 #allroutes-wrapper {
@@ -45,3 +64,101 @@ li {
   margin-top: 10px;
   border: solid;
 }
+
+label {
+  font-size: 20px;
+}
+
+#singleRoute {
+  margin-top: 10px;
+}
+
+.sidebarStyle {
+  display: inline-block;
+
+  top: 0;
+  left: 0;
+  margin: 12px;
+  background-color: #404040;
+  color: #ffffff;
+  z-index: 1 !important;
+  padding: 6px;
+  font-weight: bold;
+}
+
+.mapContainer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  height: 50vh;
+  width: 100vw;
+  border: solid;
+}
+
+.flex-grid {
+  display: flex;
+}
+.col {
+  flex: 1;
+}
+
+/* //navbar  */
+
+nav {
+  display: inline-block;
+  background: #3b394d;
+  width: 100%;
+}
+
+.nav {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.nav:hover {
+  color: white;
+  color: black;
+}
+
+.login-container {
+  border: solid;
+  display: flex;
+  background: #fde168;
+}
+
+.login-col {
+  flex: 1;
+}
+.form-container {
+  background: #fde168;
+}
+
+.logincol2 {
+  background: #b5def0;
+}
+
+.login-wrapper {
+  margin-bottom: 60px;
+  background: grey;
+  border: solid;
+  height: 500px;
+  margin-top: 90px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-mZVVLVbddJc1EDouq7D9o5F60FNPEch4CUugn9xJ88u1t4Tv&s');
+}
+
+@media (max-width: 400px) {
+  .flex-grid {
+    display: block;
+  }
+}
+
+/* #342f72 */
