--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,17 @@ body {
   line-height: 1.5;
 }
 
+#map {
+  height: 100%;
+}
+/* Optional: Makes the sample page fill the window. */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
 }
