--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,47 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
   font-size: 17px;
   line-height: 1.5;
 }
 
-#map {
-  height: 100%;
-}
 /* Optional: Makes the sample page fill the window. */
 html,
 body {
-  height: 100%;
-  margin: 10;
-  padding: 0;
+  width: 1000px;
+  margin: auto;
 }
 
 a {
   text-decoration: none;
+}
+
+#map img {
+  box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  /* width: 100%;
+  margin: 10px; */
+}
+/* 
+.add-route-desc{
+  float: right
+
+} */
+
+#map :hover {
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: #008cba;
+  opacity: 1;
+}
+
+.description {
+  font-size: 24px;
 }
 
 label {
@@ -72,7 +97,7 @@ h1.graph {
 
 .footer {
   background: white;
-  display: inline-block;
+  display: flex;
   background: #3b394d;
   width: 100%;
   color: white;
@@ -80,14 +105,13 @@ h1.graph {
 }
 
 .footer li {
-  display: inline;
   text-align: center;
+  display: inline;
 }
 
 .footer a {
   color: white;
   text-decoration: none;
-  flex: 1;
   margin: 1em;
 }
 
@@ -110,7 +134,6 @@ label {
 
 .sidebarStyle {
   display: inline-block;
-
   top: 0;
   left: 0;
   margin: 12px;
@@ -142,12 +165,17 @@ nav {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .nav:hover {
   color: white;
   color: black;
+}
+
+.name-nav {
+  padding-left: 100px;
+  color: #fde168;
 }
 
 .login-container {
