--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,42 @@ a {
   margin: 10px; */
 }
 
+.live-demo-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+.live-demo-description-container {
+  width: 600px;
+  margin: auto;
+}
+
+.live-demo-form {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.summary-container {
+  display: flex;
+
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  width: 600px;
+  margin: auto;
+  margin-bottom: 100px;
+}
+
+#live-demo-btn {
+  flex-direction: column;
+}
+
 .footerlinks a {
   color: white;
   margin: 5px;
@@ -234,7 +270,7 @@ input[type='password'] {
   margin-bottom: 60px;
   background: grey;
   height: 500px;
-  margin-top: 90px;
+  margin-top: 10%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
