--- a/public/style.css
+++ b/public/style.css
@@ -370,6 +370,8 @@ input[type='password'] {
 .main-description {
   font-size: 20px;
   margin-bottom: 60px;
+
+  text-align:center
 }
 
 .box-card-inner {
